Various style and layout tweaks

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="row center">
-        <div class="col-sm-3 col-xs-12 vcenter hcenter sticky-footer-col">
-            <a href="http://labs.bl.uk/" target="_blank" class="hidden-xs ie-vcenter">
+        <div class="col-sm-3 col-xs-12 vcenter ie-vcenter hcenter sticky-footer-col">
+            <a href="http://labs.bl.uk/" target="_blank" class="hidden-xs">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}" alt="BL Labs logo">
             </a>
         </div>
         
-        <div class="col-sm-6 vcenter hcenter sticky-footer-col">
+        <div class="col-sm-6 vcenter ie-vcenter hcenter sticky-footer-col">
         {% if not enforce_privacy %}
       
-            <div class="row ie-vcenter">
+            <div class="row">
                 <div id="footer_links">
                     <ul>
                         <li>
@@ -27,8 +27,8 @@
         {% endif %}
         </div>
         
-        <div class="col-sm-3 vcenter hcenter sticky-footer-col hidden-xs">
-            <a href="http://pybossa.com/"  target="_blank" class="ie-vcenter">
+        <div class="col-sm-3 vcenter ie-vcenter hcenter sticky-footer-col hidden-xs">
+            <a href="http://pybossa.com/"  target="_blank">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}"  alt="PyBossa logo">
             </a>
         </div>
