--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -10,7 +10,7 @@
 </div>
 
     <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
-        <p style="float:right;padding-right:10px;"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_blank">Jon Ellis</a></small></p>
+        <p class="attribution"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_blank">Jon Ellis</a></small></p>
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
             <div class="col-md-11">
