--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 .form-control[readonly].readonly-select{cursor:pointer;background-color:#fff}
 .inline-block{display:inline-block}
 ul{-webkit-padding-start:0;-moz-padding-start:0;padding-left:0;list-style:none}
-.project-desc{height:100%}
+.project-desc{height:310px}
 .project-polaroid{padding-top:25px}
 .pull-down{align-items:flex-end;-webkit-align-items: flex-end;display:flex;display:-webkit-flex;justify-content:flex-end;-ms-flex-pack:end}
 .pull-down-center{align-items:flex-end;-webkit-align-items: flex-end;display:flex;display:-webkit-flex;justify-content:flex-end;-webkit-justify-content: flex-end;-ms-flex-pack:end;height:100%;width:50%;padding-bottom:25px}
@@ -26,6 +26,7 @@ input[type="checkbox"]{-webkit-appearance:checkbox;height: auto;width:auto;margi
 input:focus,textarea:focus,textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type="datetime"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="month"]:focus,input[type="time"]:focus,input[type="week"]:focus,input[type="number"]:focus,input[type="email"]:focus,input[type="url"]:focus,input[type="search"]:focus,input[type="tel"]:focus,input[type="color"]:focus,.uneditable-input:focus{-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6)}
 .inline-radio li{display:inline-block;padding-right:20px}
 textarea{resize:none}
+.tutorial-video{width:100%;max-width:640px;}
 .notransition {-webkit-transition: none !important;-moz-transition: none !important;-o-transition: none !important;-ms-transition: none !important;transition: none !important;}
 .position-relative{position:relative}
 .float-bottom{position:absolute;bottom:0}
@@ -35,6 +36,7 @@ textarea{resize:none}
 .remove-padding-top{padding-top:0!important}
 .remove-margin-bottom{margin-bottom:0!important}
 .padding-top{padding-top:80px}
+.padding-top-md{padding-top:50px}
 .padding-top-sm{padding-top:40px}
 .padding-top-xs{padding-top:20px}
 .margin-top-xs{margin-top:10px}
@@ -200,7 +202,7 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .btn-circle a div{height:87px;text-transform:uppercase;font-size:14px;font-weight:300}
 .btn-circle:hover a{transform:none}
 .btn-circle:hover,.btn-circle:focus,.btn-circle:active,.btn-circle.active,.open .dropdown-toggle.btn-primary{color:#FAFAFA;background-position:0 -15px}
-.arc {overflow:hidden;position:absolute;top:-10px;right:50%;bottom:50%;left:-10px;transform-origin: 100% 100%;}
+.arc {overflow:hidden;position:absolute;top:-10px;right:50%;bottom:50%;left:-10px;transform-origin: 100% 100%;-webkit-transform-origin: 100% 100%;-ms-transform-origin: 100% 100%;}
 .arc:before{box-sizing:border-box;display:block;width:200%;height:200%;position:absolute;border-radius:50%;content:'';}
 .arc-q1.full{-moz-transform:rotate(90deg);-webkit-transform:rotate(90deg);-ms-transform:rotate(90deg);-o-transform:rotate(90deg);transform:rotate(90deg)}
 .arc-q1.full:before{border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
@@ -241,22 +243,22 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .btn:active,.btn.active{background-image:none}
 .btn-primary{border:2px solid #357ebd;color:#357ebd}
 .btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.open .dropdown-toggle.btn-primary{color:#fff;background-color:#357ebd;border-color:#285e8e;background-position:0 -15px}
-.btn-primary .badge{color:#357ebd;background-color:#fff}
+.badge-primary{color:#357ebd;background-color:#fff}
 .btn-default{color:#ADADAD;border:2px solid #ADADAD}
 .btn-default:hover,.btn-default:focus,.btn-default:active,.btn-default.active,.open .dropdown-toggle.btn-default{color:#FFF;background-color:#ADADAD;border-color:#888D88}
-.btn-default .badge{color:#ADADAD;background-color:#fff}
+.badge-default{color:#ADADAD;background-color:#fff}
 .btn-success{border:2px solid #2B9884;color:#2B9884}
 .btn-success:hover,.btn-success:focus,.btn-success:active,.btn-success.active,.open .dropdown-toggle.btn-success{color:#fff;background-color:#2B9884;border-color:#398439;background-position:0 -15px}
-.btn-success .badge{color:#2B9884;background-color:#fff}
+.badge-success{color:#2B9884;background-color:#fff}
 .btn-info{color:#5bc0de;border:2px solid #5bc0de}
 .btn-info:hover,.btn-info:focus,.btn-info:active,.btn-info.active,.open .dropdown-toggle.btn-info{color:#fff;background-color:#5bc0de;border-color:#46b8da}
-.btn-info .badge{color:#5bc0de;background-color:#fff}
+.badge-info{color:#5bc0de;background-color:#fff}
 .btn-warning{border:2px solid #e38d13;color:#e38d13}
 .btn-warning:hover,.btn-warning:focus,.btn-warning:active,.btn-warning.active,.open .dropdown-toggle.btn-warning{color:#fff;background-color:#e38d13;border-color:#d58512}
-.btn-warning .badge{color:#e38d13;background-color:#fff}
+.badge-warning{color:#e38d13;background-color:#fff}
 .btn-danger{border:2px solid #d2322d;color:#d2322d}
 .btn-danger:hover,.btn-danger:focus,.btn-danger:active,.btn-danger.active,.open .dropdown-toggle.btn-danger{color:#fff;background-color:#d2322d;border-color:#ac2925}
-.btn-danger .badge{color:#d2322d;background-color:#fff}
+.badge-danger{color:#d2322d;background-color:#fff}
 .btn-secondary{background-color:#2B9884;border:2px solid #fff;color:#fff;padding:10px 20px;font-weight:600;font-size:13px}
 .btn-filter{background-color:#fff;border-color:#ddd;color:#666}
 .splash{background-size:cover;color:#fff;text-align:center;background-repeat:no-repeat;}
@@ -275,6 +277,8 @@ pre.prettyprint{text-align:left}
 .alert-messages.floating{position:fixed;top:100px;width:50%;margin-left:25%;z-index:110}
 .alert-error{color:#a94442;background-color:#f2dede;border-color:#ebccd1}
 .alert-message{color:#31708f;background-color:#d9edf7;border-color:#bce8f1}
+.attribution{float:right;padding-right:10px;}
+.js-alert{margin:80px 0px 80px;z-index:9999999}
 .profile-image{max-height:300px}
 .height-300{height:300px;}
 .img-overlay-container{position:relative;display:inline-block;margin-bottom:15px}
@@ -321,7 +325,7 @@ img.grey-border{border:1px solid #DDD}
 .box-shadow-grey-top{box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);-webkit-box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);-moz-box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);z-index:2;border-top:1px solid rgba(250,250,250,0.7)}
 .box-shadow-grey{box-shadow:0 0 3px rgba(0,0,0,.2);-webkit-box-shadow:0 0 3px rgba(0,0,0,.2);-moz-box-shadow:0 0 3px rgba(0,0,0,.2);z-index:2;border:1px solid rgba(250,250,250,0.7)}
 .border-radius-sm{border-radius:6px}
-.meter{height:100%;width:50px;position:relative;background:#fff;-moz-border-radius-topright:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomright:10px;-moz-border-radius-bottomleft:10px;-webkit-border-top-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-right-radius:10px;-webkit-border-bottom-left-radius:10px;border-top-right-radius:10px;border-top-left-radius:10px;border-bottom-right-radius:10px;border-bottom-left-radius:10px;padding:3px;align-items:flex-end;-webkit-align-items:flex-end;-ms-flex-pack:end;display:flex;display:-moz-flex;display:-ms-flex;display: -ms-flexbox;display:-o-flex;display:-webkit-flex;justify-content:flex-end;-webkit-justify-content: flex-end;-ms-flex-pack: end}
+.meter{height:310px;width:50px;position:relative;background:#fff;-moz-border-radius-topright:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomright:10px;-moz-border-radius-bottomleft:10px;-webkit-border-top-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-right-radius:10px;-webkit-border-bottom-left-radius:10px;border-top-right-radius:10px;border-top-left-radius:10px;border-bottom-right-radius:10px;border-bottom-left-radius:10px;padding:3px;align-items:flex-end;-webkit-align-items:flex-end;-ms-flex-pack:end;display:flex;display:-moz-flex;display:-ms-flex;display: -ms-flexbox;display:-o-flex;display:-webkit-flex;justify-content:flex-end;-webkit-justify-content: flex-end;-ms-flex-pack: end}
 .progress-bar{background-color:#2bc253}
 .meter > span{display:block;width:100%;-webkit-border-top-right-radius:5px;-webkit-border-bottom-right-radius:7px;-moz-border-radius-topright:7px;-moz-border-radius-bottomright:7px;border-top-right-radius:5px;border-bottom-right-radius:7px;-webkit-border-top-left-radius:5px;-webkit-border-bottom-left-radius:7px;-moz-border-radius-topleft:7px;-moz-border-radius-bottomleft:7px;border-top-left-radius:5px;border-bottom-left-radius:7px;background-color:#2bc253;background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2bc253),color-stop(1,#44DF44));background-image:-moz-linear-gradient(center bottom,#2bc253 37%,#44DF44 69%);-webkit-box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);-moz-box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);position:relative}
 .meter > span:after,.animate > span > span{content:"";position:absolute;top:0;left:0;bottom:0;right:0;background-image:-webkit-gradient(linear,0 0,100% 100%,color-stop(.25,rgba(255,255,255,.2)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,.2)),color-stop(.75,rgba(255,255,255,.2)),color-stop(.75,transparent),to(transparent));background-image:-moz-linear-gradient(-45deg,rgba(255,255,255,.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.2) 50%,rgba(255,255,255,.2) 75%,transparent 75%,transparent);z-index:1;-webkit-background-size:50px 50px;-moz-background-size:50px 50px;background-size:50px 50px;-webkit-border-top-right-radius:10px;-webkit-border-bottom-right-radius:10px;-moz-border-radius-topright:10px;-moz-border-radius-bottomright:10px;border-top-right-radius:10px;border-bottom-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-left-radius:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomleft:10px;border-top-left-radius:10px;border-bottom-left-radius:10px;overflow:hidden}
@@ -362,6 +366,9 @@ to{-webkit-transform:rotate(360deg)}
 .pagination li {display: inline;padding-left: 5px;padding-right: 5px;}
 .modal-dialog {margin: 100px auto;}
 @media (max-width: 767px) {
+#project-splash h1{font-size:2.0em}
+#project-splash h2{font-size:1.2em}
+.project-desc{height:100%;display:inline-block}
 #sticky-footer{height:60px}
 #main-body-content{padding-bottom:60px;}
 .footer-links{padding-top:15px}
