--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,8 +4,8 @@
 {% block content %}
 {% include "_flash_messages_floating.html" %}
 <div class="splash" id="home-splash">
-  <div class="splash-overlay vcenter hcenter">
-    <div class="container ie-vcenter">
+  <div class="splash-overlay vcenter ie-vcenter hcenter">
+    <div class="container">
       <h1>Crowdsourcing projects<br />from the British Library</h1>
         <div class="col-xs-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
@@ -21,11 +21,11 @@
 
 <a id="intro"></a>
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
-  <p style="float:right;padding-right:10px;"><small>Photo: <a href="http://flic.kr/p/i5L8Ux" target="_blank">Mechanical Curator</a></small></p>
-      <div class="container container-padded text-center">
+  <p class="attribution"><small>Photo: <a href="http://flic.kr/p/i5L8Ux" target="_blank">Mechanical Curator</a></small></p>
+      <div class="container container-padded">
          <div class="col-sm-offset-2 col-sm-8">
-          <h2 class="inset-text-grey">What's this all about?</h2>
-            <p class="lead">
+          <h2 class="inset-text-grey text-center">What's this all about?</h2>
+            <p class="lead text-left">
                {{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, is a platform for 
                hosting experimental crowdsourcing projects aimed at improving access to the diverse collections held at the 
                British Library. Your participation will have a direct impact on enabling future research conducted at the Library.
@@ -37,7 +37,7 @@
 
  {% if categories_projects['featured'] %}
 <section class="white pattern-white-wall box-shadow-white-bottom">
-  <div class="row padding-top-sm">
+  <div class="container padding-top-sm">
     <div class="text-center col-xs-12">
       <h2>{{ _('Featured Crowdsourcing Projects') }}</h2>
     </div>
