--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -94,7 +94,7 @@
 
 <div class="project-item container container-padded">
     <div class="row project-summary padding-bottom">
-        <div class="col-md-8 col-xs-12 same-size">
+        <div class="col-md-8 col-xs-12">
             <div class="white-rounded inset-shadow-white project-desc">
                 <div class="col-sm-6 col-xs-12 hidden-xs project-polaroid">
                     <a  class="polaroid" href="{{ url_for('blplugin.details', short_name = project.short_name) }}" data-polaroid-title="{{ project.name }}">
@@ -114,35 +114,39 @@
                 
                 <div class="col-xs-12 text-center hidden-sm hidden-md hidden-lg padding-top-xs">
                     <div class="shadow shadow-inline">
-                        {{ render_project_thumbnail(project, upload_method, class="img-polaroid", id="project.id", style="max-width:150px") }}
+                        {{ render_project_thumbnail(project, upload_method, class="img-polaroid", id="project.id", style="width:100%;max-width:200px") }}
                     </div>
                 </div>
                 
                 <div class="col-sm-6 col-xs-10 col-xs-offset-1 col-sm-offset-0">
                     <h2 class="text-center-xs"><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{ project.name }}</a></h2>
-                    <p>{{ project.description }}</p>
+                    {% if project.overall_progress < 100 %}
+                        <p>{{ project.description }}</p>
+                    {% else %}
+                        <p>Project complete! <i class="fa fa-smile-o padding-left-xs"></i></p>
+                    {% endif %}
                     <div class="row hidden-md hidden-lg text-center">
                     {% if active_cat != "draft" %}
-                        <a class="btn btn-danger margin-top-sm" href="{{ url_for('project.presenter', short_name = project.short_name) }}">{{ _('Contribute') }}</a>
+                        <a class="btn btn-danger margin-top-sm margin-bottom-xs" href="{{ url_for('project.presenter', short_name = project.short_name) }}">{{ _('Contribute') }}</a>
                     {% endif %}
                     </div>
                 </div>
             </div>
         </div>
         
-            <div class="col-md-1 hidden-sm hidden-xs same-size">
+            <div class="col-md-1 hidden-sm hidden-xs">
                 <div class="meter inset-shadow-white pull-right"><span data-progress="{{ project.overall_progress | round | int }}" data-project="{{project.short_name}}"><span></span></span></div>
             </div>
         
-            <div class="col-sm-3 hidden-sm hidden-xs same-size">
-                <div class="white-rounded inset-shadow-white">
+            <div class="col-sm-3 hidden-sm hidden-xs">
+                <div class="white-rounded inset-shadow-white project-info">
                     <i class="fa fa-check-square-o fa-2x"></i><div class="padding-left-xs inline-block" id="{{project.short_name}}Complete">Completed: {{ project.overall_progress | round | int }}%</div>
                     <hr class="no-margins">
                     <i class="fa fa-tasks fa-2x"></i><div class="padding-left-xs inline-block">Tasks: {{project.n_tasks}}</div>
                     <hr class="no-margins">
                     <i class="fa fa-users fa-2x"></i><div class="padding-left-xs inline-block">Volunteers: {{ project.n_volunteers}}</div>
                 </div>
-                <div class="text-center padding-top-sm">
+                <div class="text-center padding-top-md">
                     {% if active_cat != "draft" %}
                         <p><a class="btn btn-danger" href="{{ url_for('project.presenter', short_name = project.short_name) }}">{{ _('Contribute') }}</a></p>
                     {% endif %}
